Spinning Victim (KnifeThrow)22/10/18
- Implemented the new score system

--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,11 +79,11 @@ CameraSpeed=3
 RotGridEnabled=False
 
 [MRU]
-MRUItem0=/Game/_Scenes/ClownBall
-MRUItem1=/Game/_Scenes/VR_Menu
-MRUItem2=/Game/_Scenes/Bowling
-MRUItem3=/Game/_Scenes/Maze
-MRUItem4=/Game/_Scenes/KnifeThrow
+MRUItem0=/Game/_Scenes/KnifeThrow
+MRUItem1=/Game/_Scenes/ClownBall
+MRUItem2=/Game/_Scenes/VR_Menu
+MRUItem3=/Game/_Scenes/Bowling
+MRUItem4=/Game/_Scenes/Maze
 MRUItem5=/Game/_Scenes/HeartBall
 MRUItem6=/Game/_Scenes/IntroScene
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
@@ -99,7 +99,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game/_Scenes
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/KnifeThrow
 None=======
 None=======
 None=======
@@ -152,7 +152,7 @@ LastLevel=/Game/_Scenes/Maze
 LastLevel=/Game/_Scenes/HeartBall
 LastLevel=/Game/_Scenes/Bowling
 LastLevel=/Game/_Scenes/VR_Menu
-LastLevel=/Game/_Scenes/ClownBall
+LastLevel=/Game/_Scenes/KnifeThrow
 None=======
 None=======
 None=======
@@ -2486,6 +2486,15 @@ ParticleModuleSizeMultiplyLife.Cascade=True
 MaterialEditorInstanceConstant.ParameterGroups=True
 MaterialEditorInstanceConstant.General=True
 MaterialEditorInstanceConstant.Previewing=True
+BP_KnifeThrowScoreDisplay_C.TransformCommon=True
+BP_KnifeThrowScoreDisplay_C.Rendering=True
+BP_KnifeThrowScoreDisplay_C.Input=True
+BP_KnifeThrowScoreDisplay_C.Actor=True
+BP_KnifeThrowTarget_Base_C.TransformCommon=True
+BP_KnifeThrowTarget_Base_C.Default=True
+BP_KnifeThrowTarget_Base_C.Rendering=True
+BP_KnifeThrowTarget_Base_C.Input=True
+BP_KnifeThrowTarget_Base_C.Actor=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2584,6 +2593,8 @@ ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Co
 ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier\" \"Object.Size.LifeMultiplier.Distribution\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve.Points\" \"Object.Cascade.ModuleEditorColor\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/KnifeThrow/BP_KnifeThrowTarget_Base.BP_KnifeThrowTarget_Base;
+RecentlyPlaced=/Game/Blueprints/KnifeThrow/BP_KnifeThrowScoreDisplay.BP_KnifeThrowScoreDisplay;
 RecentlyPlaced=/Game/ParticleEffects/Bowling/Steam_PS.Steam_PS;
 RecentlyPlaced=/Game/Blueprints/_GeneralUse/Buttons/BP_Button_Menu.BP_Button_Menu;
 RecentlyPlaced=/Game/Blueprints/_GeneralUse/Buttons/Maze.Maze;
@@ -2602,8 +2613,6 @@ RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/Flat_TileFloor1_Mat.Flat_TileFlo
 RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1_SpecularMap.TileFloor1_SpecularMap;
 RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1_NormalMap.TileFloor1_NormalMap;
 RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1_DisplacementMap.TileFloor1_DisplacementMap;
-RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1_AmbientOcclusionMap.TileFloor1_AmbientOcclusionMap;
-RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1.TileFloor1;
 None=======
 None=======
 None=======
@@ -2617,7 +2626,7 @@ LastLogListing=LightingResults
 [RootWindow]
 ScreenPosition=X=10.000 Y=3.000
 WindowSize=X=1577.000 Y=821.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
