--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,8 +79,8 @@ CameraSpeed=3
 RotGridEnabled=False
 
 [MRU]
-MRUItem0=/Game/_Scenes/KnifeThrow
-MRUItem1=/Game/_Scenes/ClownBall
+MRUItem0=/Game/_Scenes/ClownBall
+MRUItem1=/Game/_Scenes/KnifeThrow
 MRUItem2=/Game/_Scenes/VR_Menu
 MRUItem3=/Game/_Scenes/Bowling
 MRUItem4=/Game/_Scenes/Maze
@@ -99,7 +99,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/KnifeThrow
+ContentBrowserTab1.SelectedPaths=/Game/FBX_Models/ClownBall/ClownTorso
 None=======
 None=======
 None=======
@@ -152,7 +152,7 @@ LastLevel=/Game/_Scenes/Maze
 LastLevel=/Game/_Scenes/HeartBall
 LastLevel=/Game/_Scenes/Bowling
 LastLevel=/Game/_Scenes/VR_Menu
-LastLevel=/Game/_Scenes/KnifeThrow
+LastLevel=/Game/_Scenes/ClownBall
 None=======
 None=======
 None=======
@@ -2456,7 +2456,7 @@ BP_DestroyEyeBalInClown_C.Input=True
 BP_DestroyEyeBalInClown_C.Actor=True
 BP_DestroyEyeBalInClown_C.TransformCommon=True
 BP_RespawnBallFromClown_C.Tick=True
-BP_RespawnBallFromClown_C.Rendering=True
+BP_RespawnBallFromClown_C.Rendering=False
 BP_RespawnBallFromClown_C.Replication=True
 BP_RespawnBallFromClown_C.Input=True
 BP_RespawnBallFromClown_C.Actor=True
@@ -2593,6 +2593,17 @@ ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Co
 ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier\" \"Object.Size.LifeMultiplier.Distribution\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve.Points\" \"Object.Cascade.ModuleEditorColor\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/ClownTorsoV3_StaticMesh.ClownTorsoV3_StaticMesh;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/teeth_Mat.teeth_Mat;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/brown_eye_Mat.brown_eye_Mat;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/ponytail01_Mat.ponytail01_Mat;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/old_lightskinned_male_Mat.old_lightskinned_male_Mat;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownBallTorsoV3_teeth_baseMesh.ClownBallTorsoV3_teeth_baseMesh;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownBallTorsoV3_ponytail01Mesh_002.ClownBallTorsoV3_ponytail01Mesh_002;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownBallTorsoV3_ponytail01Mesh_001.ClownBallTorsoV3_ponytail01Mesh_001;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownBallTorsoV3_ponytail01Mesh.ClownBallTorsoV3_ponytail01Mesh;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownBallTorsoV3_high-polyMesh.ClownBallTorsoV3_high-polyMesh;
+RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownBallTorsoV3_clownballfatmanv1Mesh.ClownBallTorsoV3_clownballfatmanv1Mesh;
 RecentlyPlaced=/Game/Blueprints/KnifeThrow/BP_KnifeThrowTarget_Base.BP_KnifeThrowTarget_Base;
 RecentlyPlaced=/Game/Blueprints/KnifeThrow/BP_KnifeThrowScoreDisplay.BP_KnifeThrowScoreDisplay;
 RecentlyPlaced=/Game/ParticleEffects/Bowling/Steam_PS.Steam_PS;
@@ -2602,17 +2613,6 @@ RecentlyPlaced=/Game/Materials/Menu/Sign_BloodFloor/Flat_Menu_SignBloodTiles_Mat
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/Materials/Maze/BloodFloor/BloodFloor_Mat.BloodFloor_Mat;
-RecentlyPlaced=/Game/Materials/Maze/BarrelV1/Flat_BarrelV1Mat.Flat_BarrelV1Mat;
-RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Blueprints/ClownBall/BP_TargetPointClownBelly.BP_TargetPointClownBelly;
-RecentlyPlaced=/Game/Blueprints/ClownBall/BP_RespawnBallFromClown.BP_RespawnBallFromClown;
-RecentlyPlaced=/Game/Blueprints/ClownBall/BP_DestroyEyeBalInClown.BP_DestroyEyeBalInClown;
-RecentlyPlaced=/Game/FBX_Models/ClownBall/MouthTube/ClownMouthTubeV1.ClownMouthTubeV1;
-RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/Flat_TileFloor1_Mat.Flat_TileFloor1_Mat;
-RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1_SpecularMap.TileFloor1_SpecularMap;
-RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1_NormalMap.TileFloor1_NormalMap;
-RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1_DisplacementMap.TileFloor1_DisplacementMap;
 None=======
 None=======
 None=======
@@ -2621,7 +2621,7 @@ None=======
 BP__BottlesRandomSpawner_C=
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=FBXImport
 
 [RootWindow]
 ScreenPosition=X=10.000 Y=3.000
@@ -2649,7 +2649,7 @@ FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericImport=C:/Users/Matt/Desktop/IMG_1406.PNG
 GenericImport=C:/Users/Matt/Desktop/FearBall_Maps/Skin/FearBall_AmbientOcclusionMap.png
 GenericImport=C:/Users/Matt/Desktop/AngryBall_Mat/Angryteeth/Angryteeth_AmbientOcclusionMap.png
-GenericImport=C:/Users/Matt/Desktop/ClownMouthTubeV1.fbx
+GenericImport=F:/_CIU/_FinalProjectWork/_Original Assets/ClownBall/ClownBallTorsoV3.fbx
 None=======
 None=======
 None=======
@@ -3378,7 +3378,7 @@ VertexColorImportOption=Ignore
 VertexOverrideColor=(B=255,G=255,R=255,A=255)
 bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
-bAutoGenerateCollision=True
+bAutoGenerateCollision=False
 bCombineMeshes=False
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
@@ -3711,6 +3711,12 @@ None=======
 /Game/ParticleEffects/Bowling/Steam_Material_Inst.Steam_Material_Inst=1
 /Game/ParticleEffects/Bowling/Steam_Material.Steam_Material=0
 /Game/ParticleEffects/Bowling/Steam_PS.Steam_PS=0
+/Game/FBX_Models/ClownBall/ClownBallTorsoV3_clownballfatmanv1Mesh.ClownBallTorsoV3_clownballfatmanv1Mesh=0
+/Game/FBX_Models/ClownBall/ClownBallTorsoV3_high-polyMesh.ClownBallTorsoV3_high-polyMesh=0
+/Game/FBX_Models/ClownBall/ClownBallTorsoV3_ponytail01Mesh.ClownBallTorsoV3_ponytail01Mesh=0
+/Game/FBX_Models/ClownBall/ClownBallTorsoV3_ponytail01Mesh_001.ClownBallTorsoV3_ponytail01Mesh_001=0
+/Game/FBX_Models/ClownBall/ClownBallTorsoV3_ponytail01Mesh_002.ClownBallTorsoV3_ponytail01Mesh_002=0
+/Game/FBX_Models/ClownBall/ClownBallTorsoV3_teeth_baseMesh.ClownBallTorsoV3_teeth_baseMesh=0
 
 [MaterialEditor]
 PrimType=3
