--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,10 +79,10 @@ CameraSpeed=3
 RotGridEnabled=False
 
 [MRU]
-MRUItem0=/Game/_Scenes/IntroScene
-MRUItem1=/Game/_Scenes/KnifeThrow
-MRUItem2=/Game/_Scenes/ClownBall
-MRUItem3=/Game/_Scenes/VR_Menu
+MRUItem0=/Game/_Scenes/VR_Menu
+MRUItem1=/Game/_Scenes/IntroScene
+MRUItem2=/Game/_Scenes/KnifeThrow
+MRUItem3=/Game/_Scenes/ClownBall
 MRUItem4=/Game/_Scenes/Maze
 MRUItem5=/Game/_Scenes/HeartBall
 MRUItem6=/Game/_Scenes/Bowling
@@ -152,7 +152,7 @@ LastLevel=/Game/_Scenes/Maze
 LastLevel=/Game/_Scenes/HeartBall
 LastLevel=/Game/_Scenes/Bowling
 LastLevel=/Game/_Scenes/VR_Menu
-LastLevel=/Game/_Scenes/IntroScene
+LastLevel=/Game/_Scenes/VR_Menu
 None=======
 None=======
 None=======
@@ -2591,6 +2591,7 @@ ParticleModuleSizeBase="\"Object.Size.LifeMultiplier\" \"Object.Size.LifeMultipl
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier\" \"Object.Size.LifeMultiplier.Distribution\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve.Points\" \"Object.Cascade.ModuleEditorColor\" "
+Light=
 
 [PlacementMode]
 RecentlyPlaced=/Game/Materials/_GeneralUse/WoodGrainFloor/Flat_WoodGrainFloor_Mat.Flat_WoodGrainFloor_Mat;
@@ -2624,7 +2625,7 @@ BP__BottlesRandomSpawner_C=
 LastLogListing=LightingResults
 
 [RootWindow]
-ScreenPosition=X=-23.000 Y=0.000
+ScreenPosition=X=6.000 Y=1.000
 WindowSize=X=1577.000 Y=887.000
 InitiallyMaximized=False
 
@@ -3300,7 +3301,7 @@ None=======
 None=======
 None=======
 VR_Menu_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableGet=
 BP_RandomSpawnerVolume_C=ArrayProperty.DefaultValueCategory.None,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.Collision.Collision,
 Bowling_C=ArrayProperty.DefaultValueCategory.None,
