--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,13 +79,13 @@ CameraSpeed=3
 RotGridEnabled=False
 
 [MRU]
-MRUItem0=/Game/_Scenes/VR_Menu
-MRUItem1=/Game/_Scenes/IntroScene
-MRUItem2=/Game/_Scenes/KnifeThrow
-MRUItem3=/Game/_Scenes/ClownBall
-MRUItem4=/Game/_Scenes/Maze
-MRUItem5=/Game/_Scenes/HeartBall
-MRUItem6=/Game/_Scenes/Bowling
+MRUItem0=/Game/_Scenes/ClownBall
+MRUItem1=/Game/_Scenes/Bowling
+MRUItem2=/Game/_Scenes/VR_Menu
+MRUItem3=/Game/_Scenes/IntroScene
+MRUItem4=/Game/_Scenes/KnifeThrow
+MRUItem5=/Game/_Scenes/Maze
+MRUItem6=/Game/_Scenes/HeartBall
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [LightingBuildOptions]
@@ -99,7 +99,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game/_Scenes
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 None=======
 None=======
@@ -152,7 +152,7 @@ LastLevel=/Game/_Scenes/Maze
 LastLevel=/Game/_Scenes/HeartBall
 LastLevel=/Game/_Scenes/Bowling
 LastLevel=/Game/_Scenes/VR_Menu
-LastLevel=/Game/_Scenes/VR_Menu
+LastLevel=/Game/_Scenes/ClownBall
 None=======
 None=======
 None=======
@@ -2594,9 +2594,9 @@ ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier\" \"Object.Size.Lif
 Light=
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/_GeneralUse/Glass/Flat_Glass_Mat.Flat_Glass_Mat;
 RecentlyPlaced=/Game/Materials/_GeneralUse/WoodGrainFloor/Flat_WoodGrainFloor_Mat.Flat_WoodGrainFloor_Mat;
 RecentlyPlaced=/Game/Materials/_GeneralUse/WoodenFloorSlats/Flat_WoodenFloorSlats_Mat.Flat_WoodenFloorSlats_Mat;
-RecentlyPlaced=/Game/Materials/_GeneralUse/Glass/Flat_Glass_Mat.Flat_Glass_Mat;
 RecentlyPlaced=/Game/Materials/_GeneralUse/Cement_Speckle1/Flat_Cement_Speckle1_Mat.Flat_Cement_Speckle1_Mat;
 RecentlyPlaced=/Game/ParticleEffects/Maze/M_RideBlood.M_RideBlood;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Female_BodyParts/FemaleTargetHeadV1_Body.FemaleTargetHeadV1_Body;
@@ -2622,7 +2622,7 @@ None=======
 BP__BottlesRandomSpawner_C=
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [RootWindow]
 ScreenPosition=X=6.000 Y=1.000
