--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,9 +79,9 @@ CameraSpeed=3
 RotGridEnabled=False
 
 [MRU]
-MRUItem0=/Game/_Scenes/ClownBall
-MRUItem1=/Game/_Scenes/Bowling
-MRUItem2=/Game/_Scenes/VR_Menu
+MRUItem0=/Game/_Scenes/VR_Menu
+MRUItem1=/Game/_Scenes/ClownBall
+MRUItem2=/Game/_Scenes/Bowling
 MRUItem3=/Game/_Scenes/IntroScene
 MRUItem4=/Game/_Scenes/KnifeThrow
 MRUItem5=/Game/_Scenes/Maze
@@ -99,7 +99,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/VirtualReality/Mannequin/Animations
 None=======
 None=======
 None=======
@@ -152,7 +152,7 @@ LastLevel=/Game/_Scenes/Maze
 LastLevel=/Game/_Scenes/HeartBall
 LastLevel=/Game/_Scenes/Bowling
 LastLevel=/Game/_Scenes/VR_Menu
-LastLevel=/Game/_Scenes/ClownBall
+LastLevel=/Game/_Scenes/VR_Menu
 None=======
 None=======
 None=======
@@ -2495,6 +2495,8 @@ BP_KnifeThrowTarget_Base_C.Default=True
 BP_KnifeThrowTarget_Base_C.Rendering=True
 BP_KnifeThrowTarget_Base_C.Input=True
 BP_KnifeThrowTarget_Base_C.Actor=True
+ByteProperty.Variable=True
+ByteProperty.DefaultValueCategory=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2505,7 +2507,7 @@ PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationSh
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object="\"Object.LightmassSettings\" "
 Object=
-Object=
+Object="\"Object.Tags.ComponentTags\" "
 None=======
 None=======
 None=======
@@ -2592,6 +2594,8 @@ ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Objec
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier\" \"Object.Size.LifeMultiplier.Distribution\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve.Points\" \"Object.Cascade.ModuleEditorColor\" "
 Light=
+SkeletalMeshComponent="\"Object.Tags.ComponentTags\" "
+SkinnedMeshComponent="\"Object.Tags.ComponentTags\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Materials/_GeneralUse/Glass/Flat_Glass_Mat.Flat_Glass_Mat;
@@ -2622,7 +2626,7 @@ None=======
 BP__BottlesRandomSpawner_C=
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [RootWindow]
 ScreenPosition=X=6.000 Y=1.000
@@ -3369,7 +3373,7 @@ TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 StaticMeshActor=StaticMeshActor.Collision.Collision,
-BoolProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+BoolProperty=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
 
@@ -3771,6 +3775,7 @@ AnimSequence.Animation=True
 SkeletalMeshActor.Animation=True
 None=======
 K2Node_VariableGet.Variable=True
+SkeletalMeshComponent.Animation=True
 
 [SelectionDetails]
 PreserveScaleRatio=False
